srcs/tester/base/vector/max_size/log.txt
./base/vector/max_size/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector;
 ^
./base/vector/max_size/patched.cpp:10:28: error: use of undeclared identifier 'myvector'
 for (int i=0; i<100; i++) myvector.push_back(i);
                           ^
./base/vector/max_size/patched.cpp:12:27: error: use of undeclared identifier 'myvector'
 std::cout << "size: " << myvector.size() << "\n";
                          ^
./base/vector/max_size/patched.cpp:13:31: error: use of undeclared identifier 'myvector'
 std::cout << "capacity: " << myvector.capacity() << "\n";
                              ^
4 errors generated.
